service-mesh/bookinfo-mysql/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysqldb-v1
  labels:
    app: mysqldb
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysqldb
      version: v1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: mysqldb
        version: v1
    spec:
      containers:
      - name: mysqldb
        image: maistra/examples-bookinfo-mysqldb:1.2.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3306
        args: ["--default-authentication-plugin","mysql_native_password"]
        volumeMounts:
        - name: var-lib-mysql
          mountPath: /var/lib/mysql
      volumes:
      - name: var-lib-mysql
        persistentVolumeClaim:
          claimName: mysql
