service-mesh/bookinfo-mysql/templates/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-nodeport
  labels:
    name: mysql
spec:
  type: NodePort
  ports:
    - port: 3036
      nodePort: 30036
      name: tcp
  selector:
    name: mysqldb
