service-mesh/bookinfo-mysql/templates/network-policy-allow-from-mesh.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: mysqldb-allow-all-ns
spec:
  podSelector:
    matchLabels:
      app: mysqldb
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              maistra.io/member-of: istio-system
  policyTypes:
    - Ingress
